# p3dx_2dnav_simulator

p3dx_2dnav/: CMakeLists.txt  ReadMe.md  package.xml
p3dx_2dnav/config/: custom_rosconsole.conf  p3dx_2dnav.rviz
p3dx_2dnav/json/: 00pose.json  01pose.json  02pose.json  03pose.json  04pose.json  05pose.json  06pose.json  07pose.json  08pose.json  09pose.json  1.json  10pose.json  11pose.json  12pose.json  13pose.json  14pose.json  15pose.json  16pose.json  17pose.json  18pose.json  19pose.json  20pose.json  21pose.json  22pose.json  23pose.json  24pose.json  25pose.json  26pose.json  27pose.json  28pose.json  goals.json  locations.json
p3dx_2dnav/launch/: coupled.launch  create_map.launch  gmapping.launch  hector.launch  localize.launch  move_base.launch  new.launch  original.launch  robot.launch  test.launch
p3dx_2dnav/prototype_scripts/: adjusted.py  analyze.py  sim1.py  simulation.py  starts.py  test.py  transform.py
p3dx_2dnav/scripts/: adjusted.py  alive.py  analyze1.py  analyze_data.py  convert.py  cycles.py  data.py  display.py  final_automated_simulations.py  laser.py  run_one_simulation.py  sim1.py  storeposes.py  test.py
p3dx_2dnav/simulations/: dummy.txt
p3dx_2dnav/src/: convertPoses.cpp  lmsToBase.cpp  obstacle.cpp  transformRobotToGroundTruth.cpp
p3dx_2dnav/yamls/: costmap_common_params.yaml  coupling_model_and_robot_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml  robot_move_base_params.yaml  startAndGoalParams.yaml
p3dx_description/urdf/: pioneer3dx.xacro  pioneer3dx_wheel.xacro
